--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Registration-Numbers</title>
   <link rel="stylesheet" href="css/registration_number.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/simple-grid.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 
 <body>
@@ -21,13 +21,15 @@
         <div id="displayCount"> <strong>Enter a registration number:</strong>
 
         </div>
-        <span> <span class="alert"></span> </span>
+
         <br>
         <div id="textFieldAndBtn">
           <input type="text" class="registrationNum" name="" value="">
           <br>
           <button class="button-primary addBtn" on type="button" name="button">Add</button>
           <button class="button-primary clearBtn" on type="button" name="button">Clear</button>
+          <br>
+          <span> <span class="alert"></span> </span>
         </div>
          <br>
          <br>
@@ -40,7 +42,7 @@
             <option class="DropSelector" value="CY ">Bellville</option>
             <option class="DropSelector" value="CAW ">George</option>
             <option class="DropSelector" value="CL ">Worcester</option>
-            <option class="DropSelector" value="PA ">Pretoria</option>
+            
           </select>
         </div>
 
