--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <option class="DropSelector" value="CJ ">Paarl</option>
             <option class="DropSelector" value="CY ">Bellville</option>
             <option class="DropSelector" value="CAW ">George</option>
-            <option class="DropSelector" value="CL ">Worcester</option>
+            <option class="DropSelector" value="CW ">Worcester</option>
 
           </select>
         </div>
