--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Registration-Numbers</title>
   <link rel="stylesheet" href="css/registration_number.css">
-  <link rel="stylesheet" href="css/simple-grid.css">
+  <link rel="stylesheet" href="css/skeleton.css">
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 
 <body>
   <div class="container">
   <div class="row">
-    <div class="six columns">
-      <div class="box" id="header-note">
+    <div class="twelve columns">
+      <div class="box"twelve="header-note">
         <h2> Registration Numbers</h2>
 
 
